# django_uikit

./: .env  docker-compose.yml  pyproject.toml
api/: serializers.py  urls.py  views.py
api/swagger/: schema.py
assets/: package-lock.json  package.json
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/static/css/: style.css
core/templatetags/: custom_tags.py
gym/: settings.py  urls.py
templates/core/: login.html
templates/exercise/: card.html  create.html  detail.html  list.html  run.html
templates/layout/: basic.html  uikit_css.html  uikit_js.html
trener/: apps.py  forms.py  models.py  urls.py  views.py
trener/migrations/: 0001_initial.py  0002_remove_exercise_title_alter_exercise_name_and_more.py
uikit/: exceptions.py  forms.py  renderers.py  uikit.py  utils.py
uikit/templates/uikit/: field_errors.html  field_help_text.html
uikit/templatetags/: uikit.py
